--- a/htmlquizapp/quiz.css
+++ b/htmlquizapp/quiz.css
@@ -9,10 +9,11 @@ body {
     margin: 0;
     padding: 0;
     display: flex;
-    width: 100vw;
-    height: 100vh; /* Changed to height to make the page scrollable */
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
+    justify-content: center;
+    width: 100vw;
+    height: 100vh;
     background-color: hsl(var(--hue), 100%, 20%);
 }
 
@@ -30,7 +31,7 @@ body.wrong {
     background-color: white;
     border-radius: 5px;
     padding: 10px;
-    box-shadow: 0 0 10px 2px;
+    box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
 }
 
 .btn-grid {
@@ -56,7 +57,8 @@ body.wrong {
 }
 
 .start-btn,
-.next-btn {
+.next-btn,
+.submit-btn {
     font-size: 1.5rem;
     font-weight: bold;
     padding: 10px 20px;
@@ -73,7 +75,6 @@ body.wrong {
     display: none;
 }
 
-/* New CSS for the score display */
 .score {
     font-size: 1.5rem;
     font-weight: bold;
@@ -85,6 +86,9 @@ body.wrong {
     text-align: center;
 }
 
-#right-answers {
+.thank-you-message {
+    font-size: 2rem;
+    font-weight: bold;
     color: white;
+    margin-top: 20px;
 }
